--- a/index.html
+++ b/index.html
@@ -6,31 +6,20 @@
 	<link rel="stylesheet" href="css/styles.css">
 	<link rel="stylesheet" href="https://unpkg.com/leaflet@1.3.1/dist/leaflet.css" integrity="sha512-Rksm5RenBEKSKFjgI3a41vrjkw4EVPlJ3+OiI65vTjIdo9brlAacEuKOiQ5OFh7cOI1bkDwLqdLw3Zg0cRJAAQ==" crossorigin=""/>
 	<title>Restaurant Reviews</title>
-	<!--next 2 lines are for getting Mapbox API-->
-	<script src="https://api.mapbox.com/mapbox-gl-js/v0.46.0/mapbox-gl.js"></script>
+	<!--Mapbox API-->
 	<link href="https://api.mapbox.com/mapbox-gl-js/v0.46.0/mapbox-gl.css" rel="stylesheet"/>
-
 </head>
 
 <body>
-	<header>
+<header>
 	<nav>
 		<h1><a href="/">Restaurant Reviews</a></h1>
 	</nav>
-	</header>
+</header>
 
-	<main id="maincontent">
+<main id="maincontent">
 	<section id="map-container">
 		<div id="map"></div>
-		<!-- Add the map to your site 
-		<script>
-			mapboxgl.accessToken = 'pk.eyJ1IjoiZmxhbnphbmEiLCJhIjoiY2ppcHNuc2lqMG5haTNscGU3aDZ6ajV0eCJ9.31SNeGDlL7L74RNnwLCahw';
-			var map = new mapboxgl.Map({
-			container: 'map',
-			style: 'mapbox://styles/mapbox/streets-v10'
-			});
-		</script>
-		-->
 	</section>
 
 	<section>
@@ -45,16 +34,18 @@
 		</div>
 		<ul id="restaurants-list"></ul>
 	</section>
-	</main>
-	<script src="https://unpkg.com/leaflet@1.3.1/dist/leaflet.js" integrity="sha512-/Nsx9X4HebavoBvEBuyp3I7od5tA0UzAxs+j83KgC8PU0kgB4XiK4Lfe4y4cgBtaRJQEIFCW+oC506aPT2L1zw==" crossorigin=""></script>
-	<script type="application/javascript" charset="utf-8" src="js/dbhelper.js"></script>
-	<script type="application/javascript" charset="utf-8" src="js/main.js"></script>
-	<!-- <script async defer src="https://maps.googleapis.com/maps/api/js?key=YOUR_GOOGLE_MAPS_API_KEY&libraries=places&callback=initMap"></script> -->
+</main>
 
+<footer id="footer">
+Copyright (c) 2017 <a href="/"><strong>Restaurant Reviews</strong></a> All Rights Reserved.
+</footer>
 
-	<footer id="footer">
-	Copyright (c) 2017 <a href="/"><strong>Restaurant Reviews</strong></a> All Rights Reserved.
-	</footer>
+<script src="https://unpkg.com/leaflet@1.3.1/dist/leaflet.js" integrity="sha512-/Nsx9X4HebavoBvEBuyp3I7od5tA0UzAxs+j83KgC8PU0kgB4XiK4Lfe4y4cgBtaRJQEIFCW+oC506aPT2L1zw==" crossorigin=""></script>
+<script type="application/javascript" charset="utf-8" src="js/dbhelper.js"></script>
+<script type="application/javascript" charset="utf-8" src="js/main.js"></script>
+<!-- <script async defer src="https://maps.googleapis.com/maps/api/js?key=YOUR_GOOGLE_MAPS_API_KEY&libraries=places&callback=initMap"></script> -->
+<script src="https://api.mapbox.com/mapbox-gl-js/v0.46.0/mapbox-gl.js"></script>
+
 
 </body>
 
