--- a/index.html
+++ b/index.html
@@ -16,41 +16,41 @@
 <body>
 <header>
 	<nav>
-		<h1><a href="/">Restaurant Reviews</a></h1>
+		<h1 aria-label="Restaurant Reviews Homepage"><a href="/">Restaurant Reviews</a></h1>
 	</nav>
 </header>
 
 <main id="maincontent">
-	<section id="map-container">
+	<section id="map-container" aria-label="Map of restaurants">
 		<div id="map"></div>
 	</section>
 
-	<section id="result-container">
+	<section id="result-container" aria-label="Filter options">
 		<div class="filter-options">
 			<h2>Filter Results</h2>
 			<label for="neighborhoods-select">Choose a neighborhood:</label>
-			<select id="neighborhoods-select" name="neighborhoods" onchange="updateRestaurants()">
+			<select id="neighborhoods-select" name="neighborhoods" onchange="updateRestaurants()" aria-label="Choose a neighborhood">
 				<option value="all">All Neighborhoods</option>
 			</select>
 			
 			<label for="cuisines-select">Choose a cuisine:</label>
-			<select id="cuisines-select" name="cuisines" onchange="updateRestaurants()">
+			<select id="cuisines-select" name="cuisines" onchange="updateRestaurants()" aria-label="Choose a cuisine">
 				<option value="all">All Cuisines</option>
 			</select>
 
 		</div>
-		<ul id="restaurants-list"></ul>
+		<ul id="restaurants-list" aria-label="List of restaurants"></ul>
 	</section>
 </main>
 
 <footer id="footer">
-	<span>Copyright (c) 2017 <a href="/"><strong>Restaurant Reviews</strong></a> All Rights Reserved.</span>
+	<span>Copyright &copy; 2017 <a href="/"><strong>Restaurant Reviews</strong></a> All Rights Reserved.</span>
 </footer>
 
 <script src="https://unpkg.com/leaflet@1.3.1/dist/leaflet.js" integrity="sha512-/Nsx9X4HebavoBvEBuyp3I7od5tA0UzAxs+j83KgC8PU0kgB4XiK4Lfe4y4cgBtaRJQEIFCW+oC506aPT2L1zw==" crossorigin=""></script>
-<script type="application/javascript" charset="utf-8" src="js/dbhelper.js"></script>
-<script type="application/javascript" charset="utf-8" src="js/main.js"></script>
-<script type="text/javascript" src="js/sw.js"></script>
+<script src="js/dbhelper.js"></script>
+<script src="js/main.js"></script>
+<script src="js/sw.js"></script>
 <!-- <script async defer src="https://maps.googleapis.com/maps/api/js?key=YOUR_GOOGLE_MAPS_API_KEY&libraries=places&callback=initMap"></script> -->
 <script src="https://api.mapbox.com/mapbox-gl-js/v0.46.0/mapbox-gl.js"></script>
 
