--- a/restaurant.html
+++ b/restaurant.html
@@ -20,47 +20,47 @@
 <header>
 	<!-- real header -->
 	<nav>
-		<h1><a href="/">Restaurant Reviews</a></h1>
+		<h1 aria-label="Restaurant Reviews Homepage"><a href="/">Restaurant Reviews</a></h1>
 	</nav>
 	<!-- breadcrumb = HOME / nameofrestaurant -->
-	<ul id="breadcrumb" >
+	<ul id="breadcrumb" aria-role="Navigation">
 		<li><a href="/">Home</a></li>
 	</ul>
 </header>
 
 <main id="maincontent">
 	<!-- map -->
-	<section id="map-container">
+	<section id="map-container" aria-label="Map of restaurant">
 		<div id="map"></div>
 	</section>
 
 	<!-- restaurant -->
-	<section id="restaurant-container">
-		<h1 id="restaurant-name"></h1>
-		<img id="restaurant-img">
-		<p id="restaurant-cuisine"></p>
-		<p id="restaurant-address"></p>
-		<table id="restaurant-hours"></table>
+	<section id="restaurant-container" aria-label="Restaurant's info">
+		<h1 id="restaurant-name" aria-label="Restaurant's name"></h1>
+		<img id="restaurant-img" aria-label="Restaurant's image">
+		<p id="restaurant-cuisine" aria-label="Restaurant's cousine"></p>
+		<p id="restaurant-address" aria-label="Restaurant's address"></p>
+		<table id="restaurant-hours" aria-label="Restaurant's opening hours"></table>
 	</section>
 
 	<!-- reviews -->
-	<section id="reviews-container">
+	<section id="reviews-container" aria-label="Restaurant's reviews">
 		<ul id="reviews-list"></ul>
 	</section>
 </main>
 
 <footer id="footer">
-	<span>Copyright (c) 2017 <a href="/"><strong>Restaurant Reviews</strong></a> All Rights Reserved.</span>
+	<span>Copyright &copy; 2017 <a href="/"><strong>Restaurant Reviews</strong></a> All Rights Reserved.</span>
 </footer>
 
 	
 <script src="https://unpkg.com/leaflet@1.3.1/dist/leaflet.js" integrity="sha512-/Nsx9X4HebavoBvEBuyp3I7od5tA0UzAxs+j83KgC8PU0kgB4XiK4Lfe4y4cgBtaRJQEIFCW+oC506aPT2L1zw==" crossorigin=""></script>
 <!-- Beginning scripts -->
 <!-- Database helpers -->
-<script type="text/javascript" src="js/dbhelper.js"></script>
+<script src="js/dbhelper.js"></script>
 <!-- Main javascript file -->
-<script type="text/javascript" src="js/restaurant_info.js"></script>
-<script type="text/javascript" src="js/sw.js"></script>
+<script src="js/restaurant_info.js"></script>
+<script src="js/sw.js"></script>
 <!-- Google Maps -->
 <!--  <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA_tKbW6A5pQ-eupxI56myUnHLqYCzOjKo&libraries=places&callback=initMap"></script> -->
 <!-- MapBox -->
