--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
 <header>
 	<nav>
-		<h1 aria-label="Restaurant Reviews Homepage"><a href="/">Restaurant Reviews</a></h1>
+		<h1 aria-label="Restaurant Reviews Homepage"><a href="https://flanzana.github.io/restaurant-reviews-app/">Restaurant Reviews</a></h1>
 	</nav>
 </header>
 
@@ -44,7 +44,7 @@
 </main>
 
 <footer id="footer">
-	<span>Copyright &copy; 2017 <a href="/"><strong>Restaurant Reviews</strong></a> All Rights Reserved.</span>
+	<span>Copyright &copy; 2017 <a href="https://flanzana.github.io/restaurant-reviews-app/"><strong>Restaurant Reviews</strong></a> All Rights Reserved.</span>
 </footer>
 
 <script src="https://unpkg.com/leaflet@1.3.1/dist/leaflet.js" integrity="sha512-/Nsx9X4HebavoBvEBuyp3I7od5tA0UzAxs+j83KgC8PU0kgB4XiK4Lfe4y4cgBtaRJQEIFCW+oC506aPT2L1zw==" crossorigin=""></script>
