--- a/restaurant.html
+++ b/restaurant.html
@@ -20,11 +20,11 @@
 <header>
 	<!-- real header -->
 	<nav>
-		<h1 aria-label="Restaurant Reviews Homepage"><a href="/">Restaurant Reviews</a></h1>
+		<h1 aria-label="Restaurant Reviews Homepage"><a href="https://flanzana.github.io/restaurant-reviews-app/">Restaurant Reviews</a></h1>
 	</nav>
 	<!-- breadcrumb = HOME / nameofrestaurant -->
 	<ul id="breadcrumb" aria-role="Navigation">
-		<li><a href="/">Home</a></li>
+		<li><a href="https://flanzana.github.io/restaurant-reviews-app/">Home</a></li>
 	</ul>
 </header>
 
@@ -50,7 +50,7 @@
 </main>
 
 <footer id="footer">
-	<span>Copyright &copy; 2017 <a href="/"><strong>Restaurant Reviews</strong></a> All Rights Reserved.</span>
+	<span>Copyright &copy; 2017 <a href="https://flanzana.github.io/restaurant-reviews-app/"><strong>Restaurant Reviews</strong></a> All Rights Reserved.</span>
 </footer>
 
 	
