--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 </header>
 
 <main id="maincontent">
-	<section id="map-container" aria-label="Map of restaurants">
+	<section id="map-container" aria-label="Map of restaurants" role="application">
 		<div id="map"></div>
 	</section>
 
