--- a/restaurant.html
+++ b/restaurant.html
@@ -30,7 +30,7 @@
 
 <main id="maincontent">
 	<!-- map -->
-	<section id="map-container" aria-label="Map of restaurant">
+	<section id="map-container" aria-label="Map of restaurant" role="application">
 		<div id="map"></div>
 	</section>
 
