service worker fixed

--- a/restaurant.html
+++ b/restaurant.html
@@ -20,11 +20,11 @@
 <header>
 	<!-- real header -->
 	<nav>
-		<h1 aria-label="Restaurant Reviews Homepage"><a href="https://flanzana.github.io/restaurant-reviews-app/">Restaurant Reviews</a></h1>
+		<h1 aria-label="Restaurant Reviews Homepage"><a href="/">Restaurant Reviews</a></h1>
 	</nav>
 	<!-- breadcrumb = HOME / nameofrestaurant -->
 	<ul id="breadcrumb" aria-role="Navigation">
-		<li><a href="https://flanzana.github.io/restaurant-reviews-app/">Home</a></li>
+		<li><a href="/">Home</a></li>
 	</ul>
 </header>
 
@@ -50,7 +50,7 @@
 </main>
 
 <footer id="footer">
-	<span>Copyright &copy; 2017 <a href="https://flanzana.github.io/restaurant-reviews-app/"><strong>Restaurant Reviews</strong></a> All Rights Reserved.</span>
+	<span>Copyright &copy; 2017 <a href="/"><strong>Restaurant Reviews</strong></a> All Rights Reserved.</span>
 </footer>
 
 	
@@ -60,7 +60,8 @@
 <script src="js/dbhelper.js"></script>
 <!-- Main javascript file -->
 <script src="js/restaurant_info.js"></script>
-<script src="js/sw.js"></script>
+<!-- Service worker -->
+<script src="js/sw-register.js"></script>
 <!-- Google Maps -->
 <!--  <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA_tKbW6A5pQ-eupxI56myUnHLqYCzOjKo&libraries=places&callback=initMap"></script> -->
 <!-- MapBox -->
