--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
 <header>
 	<nav>
-		<h1 aria-label="Restaurant Reviews Homepage"><a href="https://flanzana.github.io/restaurant-reviews-app/">Restaurant Reviews</a></h1>
+		<h1 aria-label="Restaurant Reviews Homepage"><a href="/">Restaurant Reviews</a></h1>
 	</nav>
 </header>
 
@@ -44,13 +44,14 @@
 </main>
 
 <footer id="footer">
-	<span>Copyright &copy; 2017 <a href="https://flanzana.github.io/restaurant-reviews-app/"><strong>Restaurant Reviews</strong></a> All Rights Reserved.</span>
+	<span>Copyright &copy; 2017 <a href="/"><strong>Restaurant Reviews</strong></a> All Rights Reserved.</span>
 </footer>
 
 <script src="https://unpkg.com/leaflet@1.3.1/dist/leaflet.js" integrity="sha512-/Nsx9X4HebavoBvEBuyp3I7od5tA0UzAxs+j83KgC8PU0kgB4XiK4Lfe4y4cgBtaRJQEIFCW+oC506aPT2L1zw==" crossorigin=""></script>
 <script src="js/dbhelper.js"></script>
 <script src="js/main.js"></script>
-<script src="js/sw.js"></script>
+<!-- Service worker -->
+<script src="js/sw-register.js"></script>
 <!-- <script async defer src="https://maps.googleapis.com/maps/api/js?key=YOUR_GOOGLE_MAPS_API_KEY&libraries=places&callback=initMap"></script> -->
 <script src="https://api.mapbox.com/mapbox-gl-js/v0.46.0/mapbox-gl.js"></script>
 
